# Task_citofono

./: Bottone.qml  CMakeLists.txt  CentralArea.qml  Main.qml  Nomi.qml  README.md  SideArea.qml  Tastiera.qml  main.cpp
